--- a/MitigatingCircumstances/Views/Shared/Partials/_Header.cshtml
+++ b/MitigatingCircumstances/Views/Shared/Partials/_Header.cshtml
@@ -1,53 +1,54 @@
-﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-        Student Support
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+﻿<nav class="navbar navbar-top navbar-expand-lg navbar-dark bg-secondary">
+    <div class="container">
+        <a class="navbar-brand" href="/">
+            <img src="~/images/logo.svg" width="40" height="31" class="d-inline-block align-top" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Teacher</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Student
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Create ticket</a>
-                    <a class="dropdown-item" href="#">View tickets</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Report</a>
-                </div>
-            </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Teacher</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Student
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Create ticket</a>
+                        <a class="dropdown-item" href="#">View tickets</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Report</a>
+                    </div>
+                </li>
+            </ul>
 
-        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-            <li class="nav-item dropdown">
-                <a class="nav-item nav-link dropdown-toggle mr-md-2" href="#" id="bd-versions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Hi, Username
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
-                    <a class="dropdown-item active" href="@Url.Action("Index", "Home")">Dashboard</a>
+            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+                <li class="nav-item dropdown">
+                    <a class="nav-item nav-link dropdown-toggle mr-md-2" href="#" id="bd-versions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Hi, Username
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
+                        <a class="dropdown-item active" href="@Url.Action("Index", "Home")">Dashboard</a>
 
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="@Url.Action("Index", "Home")">Hi</a>
-                    <a class="dropdown-item" href="@Url.Action("Index", "Home")">Bye</a>
-                    <a class="dropdown-item" href="#">Notifications <span class="badge badge-primary">4</span></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="@Url.Action("Index", "Home")">Hi</a>
+                        <a class="dropdown-item" href="@Url.Action("Index", "Home")">Bye</a>
+                        <a class="dropdown-item" href="#">Notifications <span class="badge badge-primary">4</span></a>
 
-                    <div class="dropdown-divider"></div>
-                    <form method="post" action="@Url.Action("Logout", "Auth")">
-                        @Html.AntiForgeryToken()
-                        <input style="cursor: pointer" type="submit" class="dropdown-item" value="Logout" />
-                    </form>
-                </div>
-            </li>
-        </ul>
-    </div>
+                        <div class="dropdown-divider"></div>
+                        <form method="post" action="@Url.Action("Logout", "Auth")">
+                            @Html.AntiForgeryToken()
+                            <input style="cursor: pointer" type="submit" class="dropdown-item" value="Logout" />
+                        </form>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>    
 </nav>
