--- a/MitigatingCircumstances/Views/Shared/Partials/_Breadcrumb.cshtml
+++ b/MitigatingCircumstances/Views/Shared/Partials/_Breadcrumb.cshtml
@@ -1,5 +1,4 @@
-﻿
-<nav aria-label="breadcrumb">
+﻿<nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item active" aria-current="page">Home</li>
     </ol>
