* Added test API

--- a/MitigatingCircumstances/Views/Shared/Partials/_Header.cshtml
+++ b/MitigatingCircumstances/Views/Shared/Partials/_Header.cshtml
@@ -20,10 +20,8 @@
                         Student
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Create ticket</a>
-                        <a class="dropdown-item" href="#">View tickets</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Report</a>
+                        <a class="dropdown-item" href="@Url.Action("Create", "Student")">Create ticket</a>
+                        <a class="dropdown-item" href="@Url.Action("Index", "Student")">View tickets</a>
                     </div>
                 </li>
             </ul>
