--- a/MitigatingCircumstances/Views/Home/Index.cshtml
+++ b/MitigatingCircumstances/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="jumbotron">
     <h1 class="display-4">Mitigating Circumstances</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <p class="lead">Welcome, to our online student wellbeing portal. </p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Understood</a>
+    <p>Create and track your applications here.</p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Create application</a>
 </div>
