--- a/MitigatingCircumstances/Views/Shared/_LoginPartial.cshtml
+++ b/MitigatingCircumstances/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
                 <a asp-area="Identity" asp-page="/Account/Manage" class="dropdown-item">Profile</a>
 
                 <div class="dropdown-divider"></div>
-                <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Account/Logout", new { area = "Identity" })" method="post" id="logoutForm" class="navbar-right">
+                <form asp-area="Identity" asp-page="/Account/Logout" method="post" class="navbar-right">
                     <button type="submit" class="btn btn-link navbar-btn navbar-link dropdown-item">Logout</button>
                 </form>
             </div>
