* Fixed Login partial

--- a/MitigatingCircumstances/Views/Shared/_LoginPartial.cshtml
+++ b/MitigatingCircumstances/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
                 Hi, @UserManager.GetUserName(User)
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
-                <a asp-area="Identity" asp-page="/Account/Manage" class="dropdown-item">Profile</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" class="dropdown-item">Profile</a>
 
                 <div class="dropdown-divider"></div>
                 <form asp-area="Identity" asp-page="/Account/Logout" method="post" class="navbar-right">
