* Refactored from AppUser to ApplicationUser * Overriden the current user account page

--- a/MitigatingCircumstances/Views/Shared/Partials/_Header.cshtml
+++ b/MitigatingCircumstances/Views/Shared/Partials/_Header.cshtml
@@ -11,7 +11,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        Notification
+                        Applications
                         <span class="badge badge-primary">4</span>
                     </a>
                 </li>
