--- a/MitigatingCircumstances/Views/Shared/_LoginPartial.cshtml
+++ b/MitigatingCircumstances/Views/Shared/_LoginPartial.cshtml
@@ -4,29 +4,58 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-@if (SignInManager.IsSignedIn(User))
-{
-    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-        <li class="nav-item dropdown">
-            <a class="nav-item nav-link dropdown-toggle mr-md-2 pointer" data-toggle="dropdown">
-                Hi, @UserManager.GetUserName(User)
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" class="dropdown-item">Profile</a>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <ul class="navbar-nav mr-auto">
+            @if (User.IsInRole("Teacher"))
+            {
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        Applications
+                        <span class="badge badge-primary">4</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Teacher</a>
+                </li>
+            }
+            else if (User.IsInRole("Student"))
+            {
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Student
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="@Url.Action("Create", "Student")">Create ticket</a>
+                        <a class="dropdown-item" href="@Url.Action("Index", "Student")">View tickets</a>
+                    </div>
+                </li>
+            }
+        </ul>
 
-                <div class="dropdown-divider"></div>
-                <form asp-area="Identity" asp-page="/Account/Logout" method="post" class="navbar-right">
-                    <button type="submit" class="btn btn-link navbar-btn navbar-link dropdown-item">Logout</button>
-                </form>
-            </div>
-        </li>
-    </ul>
-}
-else
-{
-    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-        <li class="nav-item">
-            <a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Login</a>
-        </li>
-    </ul>
-}
+        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+            <li class="nav-item dropdown">
+                <a class="nav-item nav-link dropdown-toggle mr-md-2 pointer" data-toggle="dropdown">
+                    Hi, @UserManager.GetUserName(User)
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
+                    <a asp-area="Identity" asp-page="/Account/Manage/Index" class="dropdown-item">Profile</a>
+
+                    <div class="dropdown-divider"></div>
+                    <form asp-area="Identity" asp-page="/Account/Logout" method="post" class="navbar-right">
+                        <button type="submit" class="btn btn-link navbar-btn navbar-link dropdown-item">Logout</button>
+                    </form>
+                </div>
+            </li>
+        </ul>
+    }
+    else
+    {
+        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+            <li class="nav-item">
+                <a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Login</a>
+            </li>
+        </ul>
+    }
+</div>
