--- a/MitigatingCircumstances/Views/Home/Index.cshtml
+++ b/MitigatingCircumstances/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="jumbotron">
-    <h1 class="display-4">Mitigating Circumstances</h1>
+    <h1 class="display-4">SupportHub</h1>
     <p class="lead">Welcome, to our online student wellbeing portal. </p>
     <hr class="my-4">
     <p>Create and track your applications here.</p>
