--- a/MitigatingCircumstances/Views/Shared/Partials/_Header.cshtml
+++ b/MitigatingCircumstances/Views/Shared/Partials/_Header.cshtml
@@ -1,7 +1,8 @@
 ﻿<nav class="navbar navbar-top navbar-expand-lg navbar-dark bg-secondary">
     <div class="container">
         <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-            <img src="~/images/logo.svg" width="40" height="31" class="d-inline-block align-top" alt="">
+            <img src="~/images/logo.svg" width="40" height="31" class="d-inline-block align-top" alt="brand logo">
+            SupportHub
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
