--- a/MitigatingCircumstances/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/MitigatingCircumstances/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -25,6 +25,11 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="Input.Role"></label>
+                <input asp-for="Input.Role" class="form-control" placeholder="@Model.Input.Role" disabled/>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <div class="input-group">
                     <input asp-for="Input.Email" class="form-control" />
