--- a/MitigatingCircumstances/Views/Shared/_LoginPartial.cshtml
+++ b/MitigatingCircumstances/Views/Shared/_LoginPartial.cshtml
@@ -5,37 +5,30 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-@*@{ 
-    string existingRole = UserManager.GetRolesAsync(null).Result.Single();
-}
-
-<p class="lead">@existingRole</p>*@
+@{ var appUser = await UserManager.GetUserAsync(User); }
 
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
     @if (SignInManager.IsSignedIn(User))
     {
         <ul class="navbar-nav mr-auto">
-            @if (User.IsInRole(Roles.Teacher))
+            @if(await UserManager.IsInRoleAsync(appUser, Roles.Teacher))
             {
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        Applications
+                        Student applications
                         <span class="badge badge-primary">4</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Teacher</a>
-                </li>
             }
-            else if (User.IsInRole(Roles.Student))
+            else if (await UserManager.IsInRoleAsync(appUser, Roles.Student))
             {
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Student
+                        My applications
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="@Url.Action("Create", "Student")">Create ticket</a>
-                        <a class="dropdown-item" href="@Url.Action("Index", "Student")">View tickets</a>
+                        <a class="dropdown-item" href="@Url.Action("Create", "Student")">View</a>
+                        <a class="dropdown-item" href="@Url.Action("Index", "Student")">Create new</a>
                     </div>
                 </li>
             }
@@ -44,7 +37,7 @@
         <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
             <li class="nav-item dropdown">
                 <a class="nav-item nav-link dropdown-toggle mr-md-2 pointer" data-toggle="dropdown">
-                    Hi, @UserManager.GetUserName(User)
+                    Hi, @((await UserManager.GetUserAsync(User)).Firstname)
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
                     <a asp-area="Identity" asp-page="/Account/Manage/Index" class="dropdown-item">Profile</a>
