--- a/MitigatingCircumstances/wwwroot/css/site.css
+++ b/MitigatingCircumstances/wwwroot/css/site.css
@@ -6,6 +6,10 @@
     cursor: pointer;
 }
 
-.oauth-provider-icon{
+.oauth-provider-icon {
     margin-right: 1.5rem;
+}
+
+.notification-badge {
+    margin-right: 1rem;
 }
