* Optimized Home page UI

--- a/MitigatingCircumstances/Views/Home/Index.cshtml
+++ b/MitigatingCircumstances/Views/Home/Index.cshtml
@@ -1,7 +1,19 @@
-﻿<div class="jumbotron">
+﻿@using MitigatingCircumstances.Models
+@using Microsoft.AspNetCore.Identity
+
+@inject UserManager<ApplicationUser> UserManager
+
+@{
+    ViewData["Title"] = "Home";
+    var appUser = await UserManager.GetUserAsync(User);
+    var roles = await UserManager.GetRolesAsync(appUser);
+    var role = roles.FirstOrDefault();
+}
+
+<div class="jumbotron">
     <h1 class="display-4">SupportHub</h1>
-    <p class="lead">Welcome, to our online student wellbeing portal. </p>
+    <p class="lead">Welcome, to our online student wellbeing portal. Use this portal to submit and track your mitigating circumstance forms.</p>
     <hr class="my-4">
-    <p>Create and track your applications here.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Create application</a>
+    <p>You're currently logged in as a: <strong>@role</strong></p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Get started</a>
 </div>
