* Fixed roles -  it can now use the normal User.IsInRole method and AuthorizeRole attributes
* Optimized home page UI

* Added student and teacher application pages

--- a/MitigatingCircumstances/Views/Home/Index.cshtml
+++ b/MitigatingCircumstances/Views/Home/Index.cshtml
@@ -14,6 +14,6 @@
     <h1 class="display-4">SupportHub</h1>
     <p class="lead">Welcome, to our online student wellbeing portal. Use this portal to submit and track your mitigating circumstance forms.</p>
     <hr class="my-4">
-    <p>You're currently logged in as a: <strong>@role</strong></p>
+    <p>You're currently logged in as a <strong>@role</strong></p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Get started</a>
 </div>
