--- a/MitigatingCircumstances/Views/Student/Applications.cshtml
+++ b/MitigatingCircumstances/Views/Student/Applications.cshtml
@@ -35,4 +35,4 @@
     </tbody>
 </table>
 
-<button type="button" class="btn btn-primary float-right">Create new</button>
+<a class="btn btn-primary float-right" asp-action="CreateApplication">Create new</a>
