--- a/MitigatingCircumstances/Views/Student/Applications.cshtml
+++ b/MitigatingCircumstances/Views/Student/Applications.cshtml
@@ -7,7 +7,7 @@
         <tr>
             <th scope="col">Title</th>
             <th scope="col">Application Form</th>
-            <th scope="col">Assigned To</th>
+            <th scope="col">Tutor</th>
             <th scope="col">Status</th>
             <th scope="col">Actions</th>
         </tr>
