--- a/MitigatingCircumstances/Pages/Student/CreateApplications.cshtml
+++ b/MitigatingCircumstances/Pages/Student/CreateApplications.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Create Applications";
+﻿@page
+@model CreateApplicationsModel
+@{
+    ViewData["Title"] = "CreateApplications";
 }
 
 <form method="post" asp-action="">
