--- a/MitigatingCircumstances/Pages/Tutor/Applications.cshtml
+++ b/MitigatingCircumstances/Pages/Tutor/Applications.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Student Applications Forms";
+﻿@page
+@model ApplicationsModel
+@{
+    ViewData["Title"] = "Student Application Forms";
 }
 
 <table class="table table-bordered">
