* Added users and roles seeder * Added tutors to the application page

--- a/MitigatingCircumstances/Pages/Student/Applications.cshtml
+++ b/MitigatingCircumstances/Pages/Student/Applications.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Applications";
 }
 
+@if (! Model.ExtensionRequests.Any())
+{
+    <p>Empty</p>
+}
+
 <table class="table table-bordered">
     <thead>
         <tr>
