* Disbaled the wait to redirect on the logout page * Added functioanlity to the teacher applications page * Refactored some pages * Improved the applications pages

--- a/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
+++ b/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model CreateApplicationsModel
+@model CreateExtensionRequestModel
 @{
-    ViewData["Title"] = "CreateApplications";
+    ViewData["Title"] = "Create Extension Request";
 }
 
 <form method="post" enctype="multipart/form-data">
