--- a/MitigatingCircumstances/Pages/Student/Applications.cshtml
+++ b/MitigatingCircumstances/Pages/Student/Applications.cshtml
@@ -1,68 +1,52 @@
 ﻿@page
 @model ApplicationsModel
 @{
-    ViewData["Title"] = "Applications";
+    ViewData["Title"] = "Extension Requests";
 }
 
 @if (! Model.ExtensionRequests.Any())
 {
-    <p>Empty</p>
+    <div class="alert alert-warning alert-dismissible" role="alert">
+        <strong>Holy guacamole!</strong> You have not yet created any extension requests. They will be listed below once you do.
+    </div>
+}
+else
+{
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Application Form</th>
+                <th scope="col">Tutor</th>
+                <th scope="col">Status</th>
+                <th scope="col">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var extensionRequest in Model.ExtensionRequests)
+            {
+                <tr>
+                    <td>@extensionRequest.Title</td>
+                    <td>@extensionRequest.Description</td>
+                    <td>@extensionRequest.TutorAssignedTo.Fullname</td>
+                    <td>
+                        <span class="badge badge-info">Open</span>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-info btn-sm">
+                            Open
+                        </button>
+                        <button type="button" class="btn btn-info btn-sm">
+                            <i class="far fa-edit"></i>
+                        </button>
+                        <button type="button" class="btn btn-danger btn-sm">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
 
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th scope="col">Title</th>
-            <th scope="col">Application Form</th>
-            <th scope="col">Tutor</th>
-            <th scope="col">Status</th>
-            <th scope="col">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>I've had enough</td>
-            <td>This is where the mitigating circumstance request goes</td>
-            <td>Gernot Libechen</td>
-            <td>
-                <span class="badge badge-info">Open</span>
-            </td>
-            <td>
-                <button type="button" class="btn btn-info btn-sm">
-                    Open
-                </button>
-                <button type="button" class="btn btn-info btn-sm">
-                    <i class="far fa-edit"></i>
-                </button>
-                <button type="button" class="btn btn-danger btn-sm">
-                    <i class="fas fa-times"></i>
-                </button>
-            </td>
-        </tr>
-
-        @foreach (var extensionRequest in Model.ExtensionRequests)
-        {
-            <tr>
-                <td>@extensionRequest.Title</td>
-                <td>@extensionRequest.Description</td>
-                <td>@extensionRequest.TutorAssignedTo.Fullname</td>
-                <td>
-                    <span class="badge badge-info">Open</span>
-                </td>
-                <td>
-                    <button type="button" class="btn btn-info btn-sm">
-                        Open
-                    </button>
-                    <button type="button" class="btn btn-info btn-sm">
-                        <i class="far fa-edit"></i>
-                    </button>
-                    <button type="button" class="btn btn-danger btn-sm">
-                        <i class="fas fa-times"></i>
-                    </button>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<a class="btn btn-primary float-right" asp-page="./CreateApplications">Create new</a>
+<a class="btn btn-primary float-right" asp-page="./CreateExtensionRequest">Create extension request</a>
