--- a/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
+++ b/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
@@ -32,7 +32,10 @@
     </div>
 
     <div class="form-group">
-        <input type="submit" class="btn btn-primary float-right" value="Submit"/>
+        <button type="submit" class="btn btn-primary float-right">
+            Submit
+            <i class="fas fa-angle-right"></i>
+        </button>
     </div>
 </form>
 
